# rust-wasm-Library

./: .gitignore  .npmignore  AGENTS.md  API.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIFFCORE_FEATURES.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  github-repo-setup.md  implementation.md  llms-full.txt  llms.txt  package-lock.json  package.json  topics-to-set.md  tsconfig.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench/: README.md  chart.mjs  competitors.mjs  dashboard.html  fixtures.mjs  run.mjs  run_cpp.mjs
bench/results/: competitors.json
cpp/: CMakeLists.txt
cpp/include/: common.h  diff.h  diffcore.h  parser.h  path.h
cpp/src/: diff.cpp  engine.cpp  main.cpp  parser.cpp  path.cpp
docs/: newsletter-pitch-outlines.md  product-brief.md
docs/vs/: diffcore-vs-deep-diff.md  diffcore-vs-fast-json-patch.md  diffcore-vs-jsondiffpatch.md  diffcore-vs-microdiff.md
docs_ui/: package.json
docs_ui/src/app/: globals.css  layout.tsx  page.tsx
docs_ui/src/components/: ArchitectureDiagram.tsx  BenchmarkDemo.tsx  CodeBlock.tsx  Navigation.tsx  Step.tsx
examples/: 01-basic-diff.mjs  02-apply-patch.mjs  03-json-patch.mjs  04-react-hook.tsx  05-streaming.mjs  06-equals.mjs  07-ignore-and-scope.mjs  08-undo-redo.mjs  09-three-way-merge.mjs  10-custom-comparators.mjs  11-conflict-detection.mjs  12-wire-protocol.mjs
js/: package.json  tsconfig.json
js/src/: cli.ts  errors.ts  format.ts  index.ts  patch.ts  path-index.ts  react.ts  state.ts  types.ts  wasm-embedded.d.ts  worker.ts
schema/: diff-result.schema.json
scripts/: embed-wasm.mjs
src/: config.rs  diff.rs  engine.rs  error.rs  lib.rs  memory.rs  parser.rs  path.rs  simd_index.rs  status.rs
test/: bisect.mjs  browser.html  edge-cases.mjs  fuzz.mjs  minimal.mjs  node.mjs  smoke.mjs  stress.mjs  v1.2-features.mjs  v1.4-state.mjs
test/unit/: config.test.mjs  errors.test.mjs  format.test.mjs  path-index.test.mjs
test/ux/: 01-state-sync.test.mjs  02-optimistic-ui.test.mjs  03-form-changed-fields.test.mjs  04-config-watch-ignore-noise.test.mjs  05-collab-merge-conflict.test.mjs  06-audit-log-roundtrip.test.mjs  07-api-cache-tolerance.test.mjs  08-editor-undo-redo.test.mjs  09-cli-exit-codes.test.mjs  10-wire-protocol.test.mjs
